--- a/package.json
+++ b/package.json
@@ -1,29 +1,24 @@
 {
-  "name": "d3",
-  "version": "1.0.0",
-  "description": "D3.js\r 12",
-  "main": "d3Temlate.js",
+  "name": "lk",
+  "version": "1.1.2",
+  "description": "text",
+  "main": "index.js",
   "scripts": {
-    "build": "babel src -d build ",
-    "babelWatch": "babel src/**/*.js -d build -w -s inline",
-    "releaseBuild": "babel src -d release/lib --no-comments --compact true --minified"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/0425liu/bkc-d3.git"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/0425liu/bkc-d3/issues"
-  },
-  "homepage": "https://github.com/0425liu/bkc-d3#readme",
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-es2015": "^6.24.1"
-  },
-  "dependencies": {
-    "babel-preset-es2015": "^6.24.1"
+    "babel-core": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "browser-sync": "^2.18.5",
+    "del-gulpsass-blank-lines": "^0.1.3",
+    "gulp": "^3.9.1",
+    "gulp-babel": "^7.0.0",
+    "gulp-livereload": "^3.8.1",
+    "gulp-ruby-sass": "^2.1.1",
+    "gulp-sass-china": "^2.3.1",
+    "gulp-sourcemaps": "^1.9.1",
+    "gulp-uglify": "^3.0.0"
   }
 }
